// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckboxGroup /> snapshot should render the same 1`] = `
"Snapshot Diff:
 - Expected
+ Received

  <div
    className=\\"FieldGroup-sc-18uoi37-0 CheckboxGroup__Group-sc-1da60j6-0 brfAPx\\"
  >
    <div
      className=\\"Checkbox__Wrapper-sc-1ca5whm-0 lhYXdT\\"
    >
      <div
        className=\\"Checkbox__CheckboxWrapper-sc-1ca5whm-1 hHJVhY\\"
      >
        <input
          checked={false}
          className=\\"HiddenInput-sc-14w753s-0 Checkbox__HiddenCheckbox-sc-1ca5whm-4 ejOBtZ\\"
          disabled={false}
          id=\\"\\"
          name=\\"Foo\\"
          onChange={[Function anonymous]}
          type=\\"checkbox\\"
          value=\\"\\"
        />
        <span
          aria-hidden=\\"true\\"
          className=\\"material-icons MuiIcon-root-1 Checkbox__CheckIcon-sc-1ca5whm-3 cYUJOR\\"
          style={
            Object {
              \\"color\\": \\"\\",
            }
          }
        >
          check
        </span>
        <label
          className=\\"Label-sc-1ny5bqy-0 Checkbox__CheckboxLabel-sc-1ca5whm-2 kANfVa\\"
          htmlFor=\\"\\"
        >
-         Foo label
+         Foo
        </label>
      </div>
    </div>
    <div
      className=\\"Checkbox__Wrapper-sc-1ca5whm-0 lhYXdT\\"
    >
      <div
        className=\\"Checkbox__CheckboxWrapper-sc-1ca5whm-1 hHJVhY\\"
      >
        <input
          checked={false}
          className=\\"HiddenInput-sc-14w753s-0 Checkbox__HiddenCheckbox-sc-1ca5whm-4 ejOBtZ\\"
          disabled={false}
          id=\\"\\"
          name=\\"Bar\\"
          onChange={[Function anonymous]}
          type=\\"checkbox\\"
          value=\\"\\"
        />
        <span
          aria-hidden=\\"true\\"
          className=\\"material-icons MuiIcon-root-1 Checkbox__CheckIcon-sc-1ca5whm-3 cYUJOR\\"
          style={
            Object {
              \\"color\\": \\"\\",
            }
          }
        >
          check
        </span>
        <label
          className=\\"Label-sc-1ny5bqy-0 Checkbox__CheckboxLabel-sc-1ca5whm-2 kANfVa\\"
          htmlFor=\\"\\"
        >
-         Bar label
+         Bar
        </label>
      </div>
    </div>
    <div
      className=\\"Checkbox__Wrapper-sc-1ca5whm-0 lhYXdT\\"
    >
      <div
        className=\\"Checkbox__CheckboxWrapper-sc-1ca5whm-1 hHJVhY\\"
      >
        <input
          checked={false}
          className=\\"HiddenInput-sc-14w753s-0 Checkbox__HiddenCheckbox-sc-1ca5whm-4 ejOBtZ\\"
          disabled={false}
          id=\\"\\"
          name=\\"Baz\\"
          onChange={[Function anonymous]}
          type=\\"checkbox\\"
          value=\\"\\"
        />
        <span
          aria-hidden=\\"true\\"
          className=\\"material-icons MuiIcon-root-1 Checkbox__CheckIcon-sc-1ca5whm-3 cYUJOR\\"
          style={
            Object {
              \\"color\\": \\"\\",
            }
          }
        >
          check
        </span>
        <label
          className=\\"Label-sc-1ny5bqy-0 Checkbox__CheckboxLabel-sc-1ca5whm-2 kANfVa\\"
          htmlFor=\\"\\"
        >
-         Baz label
+         Baz
        </label>
      </div>
    </div>
  </div>"
`;

exports[`<CheckboxGroup /> snapshot should render the same, when using buttons 1`] = `
"Snapshot Diff:
 - Expected
+ Received

  <div
    className=\\"FieldGroup-sc-18uoi37-0 CheckboxGroup__Group-sc-1da60j6-0 brfAPx\\"
  >
    <div
      className=\\"CheckboxButton__Wrapper-sc-1rvg70v-2 cMijjU\\"
    >
      <label
        checked={false}
        className=\\"CheckboxButton__CheckButton-sc-1rvg70v-3 fMOUUC Button__StyledButton-sc-1ovnfsw-1 bCLrwz\\"
        disabled={false}
-       htmlFor=\\"checkbox-button-12\\"
+       htmlFor=\\"checkbox-button-15\\"
        onClick={[Function onClick]}
        size=\\"medium\\"
        type=\\"button\\"
      >
        
        <input
          checked={false}
          className=\\"HiddenInput-sc-14w753s-0 CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 cvUSAl\\"
          disabled={false}
-         id=\\"checkbox-button-12\\"
+         id=\\"checkbox-button-15\\"
          name=\\"Foo\\"
          onChange={[Function anonymous]}
          type=\\"checkbox\\"
          value=\\"\\"
        />
-       Foo label
+       Foo
      </label>
    </div>
    <div
      className=\\"CheckboxButton__Wrapper-sc-1rvg70v-2 cMijjU\\"
    >
      <label
        checked={false}
        className=\\"CheckboxButton__CheckButton-sc-1rvg70v-3 fMOUUC Button__StyledButton-sc-1ovnfsw-1 bCLrwz\\"
        disabled={false}
-       htmlFor=\\"checkbox-button-13\\"
+       htmlFor=\\"checkbox-button-16\\"
        onClick={[Function onClick]}
        size=\\"medium\\"
        type=\\"button\\"
      >
        
        <input
          checked={false}
          className=\\"HiddenInput-sc-14w753s-0 CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 cvUSAl\\"
          disabled={false}
-         id=\\"checkbox-button-13\\"
+         id=\\"checkbox-button-16\\"
          name=\\"Bar\\"
          onChange={[Function anonymous]}
          type=\\"checkbox\\"
          value=\\"\\"
        />
-       Bar label
+       Bar
      </label>
    </div>
    <div
      className=\\"CheckboxButton__Wrapper-sc-1rvg70v-2 cMijjU\\"
    >
      <label
        checked={false}
        className=\\"CheckboxButton__CheckButton-sc-1rvg70v-3 fMOUUC Button__StyledButton-sc-1ovnfsw-1 bCLrwz\\"
        disabled={false}
-       htmlFor=\\"checkbox-button-14\\"
+       htmlFor=\\"checkbox-button-17\\"
        onClick={[Function onClick]}
        size=\\"medium\\"
        type=\\"button\\"
      >
        
        <input
          checked={false}
          className=\\"HiddenInput-sc-14w753s-0 CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 cvUSAl\\"
          disabled={false}
-         id=\\"checkbox-button-14\\"
+         id=\\"checkbox-button-17\\"
          name=\\"Baz\\"
          onChange={[Function anonymous]}
          type=\\"checkbox\\"
          value=\\"\\"
        />
-       Baz label
+       Baz
      </label>
    </div>
  </div>"
`;

exports[`<CheckboxGroup /> snapshot simple with <CheckboxGroup.Button /> 1`] = `
.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  border-radius: 4px;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  min-height: 40px;
  padding: 8px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #ffffff;
  color: #1355d0;
  border: 2px solid #1355d0;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c3:hover {
  box-shadow: 0px 2px 4px -1px rgba(14,68,196,0.2),0px 4px 5px 0px rgba(14,68,196,0.14),0px 1px 10px 0px rgba(14,68,196,0.12);
  background-color: #e5edfc;
  border-color: #0e44c4;
}

.c3:focus,
.c3:focus-within {
  box-shadow: 0px 2px 4px -1px rgba(19,85,208,0.2),0px 4px 5px 0px rgba(19,85,208,0.14),0px 1px 10px 0px rgba(19,85,208,0.12);
}

.c3:active {
  box-shadow: 0px 5px 5px -3px rgba(14,68,196,0.2),0px 8px 10px 1px rgba(14,68,196,0.14),0px 3px 14px 2px rgba(14,68,196,0.12);
  background-color: #e5edfc;
}

.c3 .c5 function (_ref5) {
  -webkit-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  -moz-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  -ms-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  return: "\\n          font-size: ".concat(sizes[size],";\\n          margin-right: ").concat(xxsmall,"px;\\n        ");
}

.c3 .c5 function (_ref5) var sizes = {
  xsmall: "".concat(medium,"px"), small:"".concat(medium,"px"), medium:"".concat(large,"px"), large:"".concat(large,"px"), xlarge:"".concat(large,"px");
}

.c4 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1 .c6 {
  font-size: 17px;
  margin-left: 8px;
}

.c2 {
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2 c3"
      disabled={false}
      htmlFor="checkbox-button-3"
      onClick={[Function]}
      size="medium"
      type="button"
    >
      
      <input
        checked={false}
        className="c4"
        disabled={false}
        id="checkbox-button-3"
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Foo
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2 c3"
      disabled={false}
      htmlFor="checkbox-button-4"
      onClick={[Function]}
      size="medium"
      type="button"
    >
      
      <input
        checked={false}
        className="c4"
        disabled={false}
        id="checkbox-button-4"
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Bar
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2 c3"
      disabled={false}
      htmlFor="checkbox-button-5"
      onClick={[Function]}
      size="medium"
      type="button"
    >
      
      <input
        checked={false}
        className="c4"
        disabled={false}
        id="checkbox-button-5"
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Baz
    </label>
  </div>
</div>
`;

exports[`<CheckboxGroup /> snapshot simple with <CheckboxGroup.Checkbox /> 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c5 {
  display: block;
  margin-bottom: 5px;
  color: #4c4c4c;
  margin: 0 0 0 8px;
}

.c2 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c2 + .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 18px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 18px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 16px;
  margin-top: 2px;
}

.c2:checked + .c3 {
  border-width: 0;
  background-color: #1355d0;
  color: #f2f2f2;
}

.c2:hover + .c3,
.c2:focus + .c3 {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c2[disabled] {
  cursor: not-allowed;
}

.c2[disabled] ~ .c4 {
  color: #999999;
}

.c2[disabled] + .c3 {
  border-color: #999999;
  background-color: #cccccc;
}

.c2[disabled]:checked + .c3 {
  background-color: #999999;
}

.c2[disabled]:hover + .c3 {
  box-shadow: 0px 0px 0px 0px rgba(76,76,76,0.2),0px 0px 0px 0px rgba(76,76,76,0.14),0px 0px 0px 0px rgba(76,76,76,0.12);
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="c0"
>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="c2"
        disabled={false}
        id=""
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        check
      </span>
      <label
        className="c4 c5"
        htmlFor=""
      >
        Foo
      </label>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="c2"
        disabled={false}
        id=""
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        check
      </span>
      <label
        className="c4 c5"
        htmlFor=""
      >
        Bar
      </label>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="c2"
        disabled={false}
        id=""
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        check
      </span>
      <label
        className="c4 c5"
        htmlFor=""
      >
        Baz
      </label>
    </div>
  </div>
</div>
`;

exports[`<CheckboxGroup /> snapshot simple with options 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c5 {
  display: block;
  margin-bottom: 5px;
  color: #4c4c4c;
  margin: 0 0 0 8px;
}

.c2 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c2 + .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 18px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 18px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 16px;
  margin-top: 2px;
}

.c2:checked + .c3 {
  border-width: 0;
  background-color: #1355d0;
  color: #f2f2f2;
}

.c2:hover + .c3,
.c2:focus + .c3 {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c2[disabled] {
  cursor: not-allowed;
}

.c2[disabled] ~ .c4 {
  color: #999999;
}

.c2[disabled] + .c3 {
  border-color: #999999;
  background-color: #cccccc;
}

.c2[disabled]:checked + .c3 {
  background-color: #999999;
}

.c2[disabled]:hover + .c3 {
  box-shadow: 0px 0px 0px 0px rgba(76,76,76,0.2),0px 0px 0px 0px rgba(76,76,76,0.14),0px 0px 0px 0px rgba(76,76,76,0.12);
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="c0"
>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="c2"
        disabled={false}
        id=""
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        check
      </span>
      <label
        className="c4 c5"
        htmlFor=""
      >
        Foo
      </label>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="c2"
        disabled={false}
        id=""
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        check
      </span>
      <label
        className="c4 c5"
        htmlFor=""
      >
        Bar
      </label>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="c2"
        disabled={false}
        id=""
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        check
      </span>
      <label
        className="c4 c5"
        htmlFor=""
      >
        Baz
      </label>
    </div>
  </div>
</div>
`;

exports[`<CheckboxGroup /> snapshot simple with options and type prop as "button" 1`] = `
.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  border-radius: 4px;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  min-height: 40px;
  padding: 8px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #ffffff;
  color: #1355d0;
  border: 2px solid #1355d0;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c3:hover {
  box-shadow: 0px 2px 4px -1px rgba(14,68,196,0.2),0px 4px 5px 0px rgba(14,68,196,0.14),0px 1px 10px 0px rgba(14,68,196,0.12);
  background-color: #e5edfc;
  border-color: #0e44c4;
}

.c3:focus,
.c3:focus-within {
  box-shadow: 0px 2px 4px -1px rgba(19,85,208,0.2),0px 4px 5px 0px rgba(19,85,208,0.14),0px 1px 10px 0px rgba(19,85,208,0.12);
}

.c3:active {
  box-shadow: 0px 5px 5px -3px rgba(14,68,196,0.2),0px 8px 10px 1px rgba(14,68,196,0.14),0px 3px 14px 2px rgba(14,68,196,0.12);
  background-color: #e5edfc;
}

.c3 .c5 function (_ref5) {
  -webkit-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  -moz-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  -ms-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  return: "\\n          font-size: ".concat(sizes[size],";\\n          margin-right: ").concat(xxsmall,"px;\\n        ");
}

.c3 .c5 function (_ref5) var sizes = {
  xsmall: "".concat(medium,"px"), small:"".concat(medium,"px"), medium:"".concat(large,"px"), large:"".concat(large,"px"), xlarge:"".concat(large,"px");
}

.c4 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1 .c6 {
  font-size: 17px;
  margin-left: 8px;
}

.c2 {
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2 c3"
      disabled={false}
      htmlFor="checkbox-button-0"
      onClick={[Function]}
      size="medium"
      type="button"
    >
      
      <input
        checked={false}
        className="c4"
        disabled={false}
        id="checkbox-button-0"
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Foo
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2 c3"
      disabled={false}
      htmlFor="checkbox-button-1"
      onClick={[Function]}
      size="medium"
      type="button"
    >
      
      <input
        checked={false}
        className="c4"
        disabled={false}
        id="checkbox-button-1"
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Bar
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2 c3"
      disabled={false}
      htmlFor="checkbox-button-2"
      onClick={[Function]}
      size="medium"
      type="button"
    >
      
      <input
        checked={false}
        className="c4"
        disabled={false}
        id="checkbox-button-2"
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Baz
    </label>
  </div>
</div>
`;

exports[`<CheckboxGroup /> snapshot with <CheckboxGroup.Button /> and icons 1`] = `
.c5 {
  pointer-events: none;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  border-radius: 4px;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  min-height: 40px;
  padding: 8px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #ffffff;
  color: #1355d0;
  border: 2px solid #1355d0;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c3:hover {
  box-shadow: 0px 2px 4px -1px rgba(14,68,196,0.2),0px 4px 5px 0px rgba(14,68,196,0.14),0px 1px 10px 0px rgba(14,68,196,0.12);
  background-color: #e5edfc;
  border-color: #0e44c4;
}

.c3:focus,
.c3:focus-within {
  box-shadow: 0px 2px 4px -1px rgba(19,85,208,0.2),0px 4px 5px 0px rgba(19,85,208,0.14),0px 1px 10px 0px rgba(19,85,208,0.12);
}

.c3:active {
  box-shadow: 0px 5px 5px -3px rgba(14,68,196,0.2),0px 8px 10px 1px rgba(14,68,196,0.14),0px 3px 14px 2px rgba(14,68,196,0.12);
  background-color: #e5edfc;
}

.c3 .c4 function (_ref5) {
  -webkit-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  -moz-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  -ms-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  return: "\\n          font-size: ".concat(sizes[size],";\\n          margin-right: ").concat(xxsmall,"px;\\n        ");
}

.c3 .c4 function (_ref5) var sizes = {
  xsmall: "".concat(medium,"px"), small:"".concat(medium,"px"), medium:"".concat(large,"px"), large:"".concat(large,"px"), xlarge:"".concat(large,"px");
}

.c7 .c4 function (_ref5) {
  -webkit-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  -moz-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  -ms-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  return: "\\n          font-size: ".concat(sizes[size],";\\n          margin-right: ").concat(xxsmall,"px;\\n        ");
}

.c7 .c4 function (_ref5) var sizes = {
  xsmall: "".concat(medium,"px"), small:"".concat(medium,"px"), medium:"".concat(large,"px"), large:"".concat(large,"px"), xlarge:"".concat(large,"px");
}

.c8 .c4 function (_ref5) {
  -webkit-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  -moz-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  -ms-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  return: "\\n          font-size: ".concat(sizes[size],";\\n          margin-right: ").concat(xxsmall,"px;\\n        ");
}

.c8 .c4 function (_ref5) var sizes = {
  xsmall: "".concat(medium,"px"), small:"".concat(medium,"px"), medium:"".concat(large,"px"), large:"".concat(large,"px"), xlarge:"".concat(large,"px");
}

.c9 .c4 function (_ref5) {
  -webkit-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  -moz-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  -ms-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  return: "\\n          font-size: ".concat(sizes[size],";\\n          margin-right: ").concat(xxsmall,"px;\\n        ");
}

.c9 .c4 function (_ref5) var sizes = {
  xsmall: "".concat(medium,"px"), small:"".concat(medium,"px"), medium:"".concat(large,"px"), large:"".concat(large,"px"), xlarge:"".concat(large,"px");
}

.c6 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1 .c10 {
  font-size: 17px;
  margin-left: 8px;
}

.c2 {
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

@media (min-width:0px) {
  .c5 {
    margin-right: 4px;
  }
}

@media (min-width:600px) {
  .c5 {
    margin-right: 6px;
  }
}

@media (min-width:1024px) {
  .c5 {
    margin-right: 8px;
  }
}

@media (min-width:1440px) {
  .c5 {
    margin-right: 12px;
  }
}

@media (min-width:1920px) {
  .c5 {
    margin-right: 16px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2 c3"
      disabled={false}
      htmlFor="checkbox-button-18"
      onClick={[Function]}
      size="medium"
      type="button"
    >
      <span
        aria-hidden="true"
        center={false}
        checked={false}
        className="material-icons MuiIcon-root-1 c2 c4 c5"
        disabled={false}
        error={false}
        full={false}
        htmlFor="checkbox-button-18"
        onClick={[Function]}
        size="medium"
        stroked={true}
        style={
          Object {
            "color": "primary",
          }
        }
        theme={
          Object {
            "baseFontSize": 16,
            "breakpoints": Object {
              "large": Object {
                "columns": 12,
                "width": 1440,
              },
              "medium": Object {
                "columns": 12,
                "width": 1024,
              },
              "small": Object {
                "columns": 8,
                "width": 600,
              },
              "xlarge": Object {
                "columns": 12,
                "width": 1920,
              },
              "xsmall": Object {
                "columns": 4,
              },
            },
            "colors": Object {
              "error": Object {
                "100": "#ffe5e9",
                "300": "#ff6c82",
                "500": "#ff2d4d",
                "700": "#ff223d",
                "900": "#ac001a",
              },
              "neutral": Object {
                "0": "#ffffff",
                "100": "#f2f2f2",
                "1000": "#000000",
                "300": "#cccccc",
                "500": "#999999",
                "700": "#4c4c4c",
                "900": "#191919",
              },
              "primary": Object {
                "100": "#e5edfc",
                "300": "#5a88de",
                "500": "#1355d0",
                "700": "#0e44c4",
                "900": "#062ab3",
              },
              "secondary": Object {
                "100": "#f5b3cd",
                "300": "#e84d8b",
                "500": "#de0059",
                "700": "#d50048",
                "900": "#c8002e",
              },
              "success": Object {
                "100": "#edfadf",
                "300": "#a5e064",
                "500": "#7ed321",
                "700": "#6bc818",
                "900": "#3c6510",
              },
              "warning": Object {
                "100": "#ffefd6",
                "300": "#f5b24d",
                "500": "#f09100",
                "700": "#ec7e00",
                "900": "#a36300",
              },
            },
            "components": Object {
              "button": Object {
                "skins": Object {
                  "error": Object {
                    "mainColor": Object {
                      "100": "#ffe5e9",
                      "300": "#ff6c82",
                      "500": "#ff2d4d",
                      "700": "#ff223d",
                      "900": "#ac001a",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#cccccc",
                      "500": "#999999",
                      "700": "#4c4c4c",
                      "900": "#191919",
                    },
                  },
                  "neutral": Object {
                    "mainColor": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#cccccc",
                      "500": "#999999",
                      "700": "#4c4c4c",
                      "900": "#191919",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#cccccc",
                      "500": "#999999",
                      "700": "#4c4c4c",
                      "900": "#191919",
                    },
                  },
                  "primary": Object {
                    "mainColor": Object {
                      "100": "#e5edfc",
                      "300": "#5a88de",
                      "500": "#1355d0",
                      "700": "#0e44c4",
                      "900": "#062ab3",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#cccccc",
                      "500": "#999999",
                      "700": "#4c4c4c",
                      "900": "#191919",
                    },
                  },
                  "secondary": Object {
                    "mainColor": Object {
                      "100": "#f5b3cd",
                      "300": "#e84d8b",
                      "500": "#de0059",
                      "700": "#d50048",
                      "900": "#c8002e",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#cccccc",
                      "500": "#999999",
                      "700": "#4c4c4c",
                      "900": "#191919",
                    },
                  },
                  "success": Object {
                    "mainColor": Object {
                      "100": "#edfadf",
                      "300": "#a5e064",
                      "500": "#7ed321",
                      "700": "#6bc818",
                      "900": "#3c6510",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#cccccc",
                      "500": "#999999",
                      "700": "#4c4c4c",
                      "900": "#191919",
                    },
                  },
                  "warning": Object {
                    "mainColor": Object {
                      "100": "#ffefd6",
                      "300": "#f5b24d",
                      "500": "#f09100",
                      "700": "#ec7e00",
                      "900": "#a36300",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#cccccc",
                      "500": "#999999",
                      "700": "#4c4c4c",
                      "900": "#191919",
                    },
                  },
                },
              },
            },
            "spacing": Object {
              "large": 24,
              "medium": 16,
              "small": 12,
              "xlarge": 32,
              "xsmall": 8,
              "xxlarge": 40,
              "xxsmall": 4,
              "xxxlarge": 48,
              "xxxsmall": 2,
            },
          }
        }
        type="button"
      >
        print
      </span>
      <input
        checked={false}
        className="c6"
        disabled={false}
        id="checkbox-button-18"
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Foo
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2 c3"
      disabled={false}
      htmlFor="checkbox-button-19"
      onClick={[Function]}
      size="medium"
      type="button"
    >
      
      <input
        checked={false}
        className="c6"
        disabled={false}
        id="checkbox-button-19"
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Bar
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2 c3"
      disabled={false}
      htmlFor="checkbox-button-20"
      onClick={[Function]}
      size="medium"
      type="button"
    >
      <span
        aria-hidden="true"
        center={false}
        checked={false}
        className="material-icons MuiIcon-root-1 c2 c4 c5"
        disabled={false}
        error={false}
        full={false}
        htmlFor="checkbox-button-20"
        onClick={[Function]}
        size="medium"
        stroked={true}
        style={
          Object {
            "color": "primary",
          }
        }
        theme={
          Object {
            "baseFontSize": 16,
            "breakpoints": Object {
              "large": Object {
                "columns": 12,
                "width": 1440,
              },
              "medium": Object {
                "columns": 12,
                "width": 1024,
              },
              "small": Object {
                "columns": 8,
                "width": 600,
              },
              "xlarge": Object {
                "columns": 12,
                "width": 1920,
              },
              "xsmall": Object {
                "columns": 4,
              },
            },
            "colors": Object {
              "error": Object {
                "100": "#ffe5e9",
                "300": "#ff6c82",
                "500": "#ff2d4d",
                "700": "#ff223d",
                "900": "#ac001a",
              },
              "neutral": Object {
                "0": "#ffffff",
                "100": "#f2f2f2",
                "1000": "#000000",
                "300": "#cccccc",
                "500": "#999999",
                "700": "#4c4c4c",
                "900": "#191919",
              },
              "primary": Object {
                "100": "#e5edfc",
                "300": "#5a88de",
                "500": "#1355d0",
                "700": "#0e44c4",
                "900": "#062ab3",
              },
              "secondary": Object {
                "100": "#f5b3cd",
                "300": "#e84d8b",
                "500": "#de0059",
                "700": "#d50048",
                "900": "#c8002e",
              },
              "success": Object {
                "100": "#edfadf",
                "300": "#a5e064",
                "500": "#7ed321",
                "700": "#6bc818",
                "900": "#3c6510",
              },
              "warning": Object {
                "100": "#ffefd6",
                "300": "#f5b24d",
                "500": "#f09100",
                "700": "#ec7e00",
                "900": "#a36300",
              },
            },
            "components": Object {
              "button": Object {
                "skins": Object {
                  "error": Object {
                    "mainColor": Object {
                      "100": "#ffe5e9",
                      "300": "#ff6c82",
                      "500": "#ff2d4d",
                      "700": "#ff223d",
                      "900": "#ac001a",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#cccccc",
                      "500": "#999999",
                      "700": "#4c4c4c",
                      "900": "#191919",
                    },
                  },
                  "neutral": Object {
                    "mainColor": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#cccccc",
                      "500": "#999999",
                      "700": "#4c4c4c",
                      "900": "#191919",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#cccccc",
                      "500": "#999999",
                      "700": "#4c4c4c",
                      "900": "#191919",
                    },
                  },
                  "primary": Object {
                    "mainColor": Object {
                      "100": "#e5edfc",
                      "300": "#5a88de",
                      "500": "#1355d0",
                      "700": "#0e44c4",
                      "900": "#062ab3",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#cccccc",
                      "500": "#999999",
                      "700": "#4c4c4c",
                      "900": "#191919",
                    },
                  },
                  "secondary": Object {
                    "mainColor": Object {
                      "100": "#f5b3cd",
                      "300": "#e84d8b",
                      "500": "#de0059",
                      "700": "#d50048",
                      "900": "#c8002e",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#cccccc",
                      "500": "#999999",
                      "700": "#4c4c4c",
                      "900": "#191919",
                    },
                  },
                  "success": Object {
                    "mainColor": Object {
                      "100": "#edfadf",
                      "300": "#a5e064",
                      "500": "#7ed321",
                      "700": "#6bc818",
                      "900": "#3c6510",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#cccccc",
                      "500": "#999999",
                      "700": "#4c4c4c",
                      "900": "#191919",
                    },
                  },
                  "warning": Object {
                    "mainColor": Object {
                      "100": "#ffefd6",
                      "300": "#f5b24d",
                      "500": "#f09100",
                      "700": "#ec7e00",
                      "900": "#a36300",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#cccccc",
                      "500": "#999999",
                      "700": "#4c4c4c",
                      "900": "#191919",
                    },
                  },
                },
              },
            },
            "spacing": Object {
              "large": 24,
              "medium": 16,
              "small": 12,
              "xlarge": 32,
              "xsmall": 8,
              "xxlarge": 40,
              "xxsmall": 4,
              "xxxlarge": 48,
              "xxxsmall": 2,
            },
          }
        }
        type="button"
      >
        face
      </span>
      <input
        checked={false}
        className="c6"
        disabled={false}
        id="checkbox-button-20"
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Baz
    </label>
  </div>
</div>
`;

exports[`<CheckboxGroup /> snapshot with <CheckboxGroup.Button /> with an error 1`] = `
.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  border-radius: 4px;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  min-height: 40px;
  padding: 8px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #ffffff;
  color: #ff2d4d;
  border: 2px solid #ff2d4d;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c3:hover {
  box-shadow: 0px 2px 4px -1px rgba(255,34,61,0.2),0px 4px 5px 0px rgba(255,34,61,0.14),0px 1px 10px 0px rgba(255,34,61,0.12);
  background-color: #ffe5e9;
  border-color: #ff223d;
}

.c3:focus,
.c3:focus-within {
  box-shadow: 0px 2px 4px -1px rgba(255,45,77,0.2),0px 4px 5px 0px rgba(255,45,77,0.14),0px 1px 10px 0px rgba(255,45,77,0.12);
}

.c3:active {
  box-shadow: 0px 5px 5px -3px rgba(255,34,61,0.2),0px 8px 10px 1px rgba(255,34,61,0.14),0px 3px 14px 2px rgba(255,34,61,0.12);
  background-color: #ffe5e9;
}

.c3 .c6 function (_ref5) {
  -webkit-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  -moz-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  -ms-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  return: "\\n          font-size: ".concat(sizes[size],";\\n          margin-right: ").concat(xxsmall,"px;\\n        ");
}

.c3 .c6 function (_ref5) var sizes = {
  xsmall: "".concat(medium,"px"), small:"".concat(medium,"px"), medium:"".concat(large,"px"), large:"".concat(large,"px"), xlarge:"".concat(large,"px");
}

.c4 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1 .c7 {
  font-size: 17px;
  margin-left: 8px;
}

.c2 {
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

.c5 {
  color: #ac001a;
  font-size: 14px;
  cursor: text;
  font-style: italic;
  font-weight: 600;
  display: block;
  margin-left: -2px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2 c3"
      disabled={false}
      htmlFor="checkbox-button-6"
      onClick={[Function]}
      size="medium"
      type="button"
    >
      
      <input
        checked={false}
        className="c4"
        disabled={false}
        id="checkbox-button-6"
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Foo
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2 c3"
      disabled={false}
      htmlFor="checkbox-button-7"
      onClick={[Function]}
      size="medium"
      type="button"
    >
      
      <input
        checked={false}
        className="c4"
        disabled={false}
        id="checkbox-button-7"
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Bar
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2 c3"
      disabled={false}
      htmlFor="checkbox-button-8"
      onClick={[Function]}
      size="medium"
      type="button"
    >
      
      <input
        checked={false}
        className="c4"
        disabled={false}
        id="checkbox-button-8"
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Baz
    </label>
  </div>
  <span
    className="c5"
  >
    Error Message
  </span>
</div>
`;

exports[`<CheckboxGroup /> snapshot with <CheckboxGroup.Button /> with disabled options 1`] = `
.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  border-radius: 4px;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  min-height: 40px;
  padding: 8px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #ffffff;
  color: #1355d0;
  border: 2px solid #1355d0;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c6:hover {
  box-shadow: 0px 2px 4px -1px rgba(14,68,196,0.2),0px 4px 5px 0px rgba(14,68,196,0.14),0px 1px 10px 0px rgba(14,68,196,0.12);
  background-color: #e5edfc;
  border-color: #0e44c4;
}

.c6:focus,
.c6:focus-within {
  box-shadow: 0px 2px 4px -1px rgba(19,85,208,0.2),0px 4px 5px 0px rgba(19,85,208,0.14),0px 1px 10px 0px rgba(19,85,208,0.12);
}

.c6:active {
  box-shadow: 0px 5px 5px -3px rgba(14,68,196,0.2),0px 8px 10px 1px rgba(14,68,196,0.14),0px 3px 14px 2px rgba(14,68,196,0.12);
  background-color: #e5edfc;
}

.c6 .c8 function (_ref5) {
  -webkit-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  -moz-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  -ms-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  return: "\\n          font-size: ".concat(sizes[size],";\\n          margin-right: ").concat(xxsmall,"px;\\n        ");
}

.c6 .c8 function (_ref5) var sizes = {
  xsmall: "".concat(medium,"px"), small:"".concat(medium,"px"), medium:"".concat(large,"px"), large:"".concat(large,"px"), xlarge:"".concat(large,"px");
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  border-radius: 4px;
  cursor: not-allowed;
  font-size: 16px;
  line-height: 24px;
  min-height: 40px;
  padding: 8px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #ffffff;
  color: #999999;
  border: 2px solid #999999;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c3 .c8 function (_ref5) {
  -webkit-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  -moz-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  -ms-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  return: "\\n          font-size: ".concat(sizes[size],";\\n          margin-right: ").concat(xxsmall,"px;\\n        ");
}

.c3 .c8 function (_ref5) var sizes = {
  xsmall: "".concat(medium,"px"), small:"".concat(medium,"px"), medium:"".concat(large,"px"), large:"".concat(large,"px"), xlarge:"".concat(large,"px");
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  border-radius: 4px;
  cursor: not-allowed;
  font-size: 16px;
  line-height: 24px;
  min-height: 40px;
  padding: 8px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #999999;
  color: #ffffff;
  border: 2px solid #999999;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c7 .c8 function (_ref5) {
  -webkit-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  -moz-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  -ms-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  return: "\\n          font-size: ".concat(sizes[size],";\\n          margin-right: ").concat(xxsmall,"px;\\n        ");
}

.c7 .c8 function (_ref5) var sizes = {
  xsmall: "".concat(medium,"px"), small:"".concat(medium,"px"), medium:"".concat(large,"px"), large:"".concat(large,"px"), xlarge:"".concat(large,"px");
}

.c4 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1 .c5 {
  font-size: 17px;
  margin-left: 8px;
}

.c2 {
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2 c3"
      disabled={true}
      htmlFor="checkbox-button-9"
      onClick={[Function]}
      size="medium"
      type="button"
    >
      
      <input
        checked={false}
        className="c4"
        disabled={true}
        id="checkbox-button-9"
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Foo
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c5 "
        style={
          Object {
            "color": "",
          }
        }
      >
        lock
      </span>
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2 c6"
      disabled={false}
      htmlFor="checkbox-button-10"
      onClick={[Function]}
      size="medium"
      type="button"
    >
      
      <input
        checked={false}
        className="c4"
        disabled={false}
        id="checkbox-button-10"
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Bar
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={true}
      className="c2 c7"
      disabled={true}
      htmlFor="checkbox-button-11"
      onClick={[Function]}
      size="medium"
      type="button"
    >
      
      <input
        checked={true}
        className="c4"
        disabled={true}
        id="checkbox-button-11"
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Baz
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c5 "
        style={
          Object {
            "color": "",
          }
        }
      >
        lock
      </span>
    </label>
  </div>
</div>
`;

exports[`<CheckboxGroup /> snapshot with <CheckboxGroup.Checkbox /> with an error 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c5 {
  display: block;
  margin-bottom: 5px;
  color: #4c4c4c;
  margin: 0 0 0 8px;
}

.c7 + .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 18px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 18px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 16px;
  margin-top: 2px;
}

.c7:checked + .c3 {
  border-width: 0;
  background-color: #1355d0;
  color: #f2f2f2;
}

.c7:hover + .c3,
.c7:focus + .c3 {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c7[disabled] ~ .c4 {
  color: #999999;
}

.c7[disabled] + .c3 {
  border-color: #999999;
  background-color: #cccccc;
}

.c7[disabled]:checked + .c3 {
  background-color: #999999;
}

.c7[disabled]:hover + .c3 {
  box-shadow: 0px 0px 0px 0px rgba(76,76,76,0.2),0px 0px 0px 0px rgba(76,76,76,0.14),0px 0px 0px 0px rgba(76,76,76,0.12);
}

.c2 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c2 + .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 18px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 18px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 16px;
  margin-top: 2px;
}

.c2:checked + .c3 {
  border-width: 0;
  background-color: #1355d0;
  color: #f2f2f2;
}

.c2:hover + .c3,
.c2:focus + .c3 {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c2 + .c3 {
  border-color: #ff2d4d;
}

.c2:checked + .c3 {
  background-color: #ff2d4d;
}

.c2:hover + .c3,
.c2:focus + .c3 {
  border-color: #ff2d4d;
  box-shadow: 0px 3px 5px -1px rgba(255,45,77,0.2),0px 5px 8px 0px rgba(255,45,77,0.14),0px 1px 14px 0px rgba(255,45,77,0.12);
}

.c2[disabled] {
  cursor: not-allowed;
}

.c2[disabled] ~ .c4 {
  color: #999999;
}

.c2[disabled] + .c3 {
  border-color: #999999;
  background-color: #cccccc;
}

.c2[disabled]:checked + .c3 {
  background-color: #999999;
}

.c2[disabled]:hover + .c3 {
  box-shadow: 0px 0px 0px 0px rgba(76,76,76,0.2),0px 0px 0px 0px rgba(76,76,76,0.14),0px 0px 0px 0px rgba(76,76,76,0.12);
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

.c6 {
  color: #ac001a;
  font-size: 14px;
  cursor: text;
  font-style: italic;
  font-weight: 600;
  display: block;
  margin-left: -2px;
}

<div
  className="c0"
>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="c2"
        disabled={false}
        id=""
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        check
      </span>
      <label
        className="c4 c5"
        htmlFor=""
      >
        Foo
      </label>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="c2"
        disabled={false}
        id=""
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        check
      </span>
      <label
        className="c4 c5"
        htmlFor=""
      >
        Bar
      </label>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="c2"
        disabled={false}
        id=""
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        check
      </span>
      <label
        className="c4 c5"
        htmlFor=""
      >
        Baz
      </label>
    </div>
  </div>
  <span
    className="c6"
  >
    Error Message
  </span>
</div>
`;

exports[`<CheckboxGroup /> snapshot with <CheckboxGroup.Checkbox /> with disabled options 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c5 {
  display: block;
  margin-bottom: 5px;
  color: #4c4c4c;
  margin: 0 0 0 8px;
}

.c2 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c2 + .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 18px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 18px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 16px;
  margin-top: 2px;
}

.c2:checked + .c3 {
  border-width: 0;
  background-color: #1355d0;
  color: #f2f2f2;
}

.c2:hover + .c3,
.c2:focus + .c3 {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c2[disabled] {
  cursor: not-allowed;
}

.c2[disabled] ~ .c4 {
  color: #999999;
}

.c2[disabled] + .c3 {
  border-color: #999999;
  background-color: #cccccc;
}

.c2[disabled]:checked + .c3 {
  background-color: #999999;
}

.c2[disabled]:hover + .c3 {
  box-shadow: 0px 0px 0px 0px rgba(76,76,76,0.2),0px 0px 0px 0px rgba(76,76,76,0.14),0px 0px 0px 0px rgba(76,76,76,0.12);
}

.c6 + .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 18px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 18px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 16px;
  margin-top: 2px;
}

.c6:checked + .c3 {
  border-width: 0;
  background-color: #1355d0;
  color: #f2f2f2;
}

.c6:hover + .c3,
.c6:focus + .c3 {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c6 + .c3 {
  border-color: #ff2d4d;
}

.c6:checked + .c3 {
  background-color: #ff2d4d;
}

.c6:hover + .c3,
.c6:focus + .c3 {
  border-color: #ff2d4d;
  box-shadow: 0px 3px 5px -1px rgba(255,45,77,0.2),0px 5px 8px 0px rgba(255,45,77,0.14),0px 1px 14px 0px rgba(255,45,77,0.12);
}

.c6[disabled] ~ .c4 {
  color: #999999;
}

.c6[disabled] + .c3 {
  border-color: #999999;
  background-color: #cccccc;
}

.c6[disabled]:checked + .c3 {
  background-color: #999999;
}

.c6[disabled]:hover + .c3 {
  box-shadow: 0px 0px 0px 0px rgba(76,76,76,0.2),0px 0px 0px 0px rgba(76,76,76,0.14),0px 0px 0px 0px rgba(76,76,76,0.12);
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="c0"
>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="c2"
        disabled={true}
        id=""
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        check
      </span>
      <label
        className="c4 c5"
        htmlFor=""
      >
        Foo
      </label>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="c2"
        disabled={false}
        id=""
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        check
      </span>
      <label
        className="c4 c5"
        htmlFor=""
      >
        Bar
      </label>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={true}
        className="c2"
        disabled={true}
        id=""
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        check
      </span>
      <label
        className="c4 c5"
        htmlFor=""
      >
        Baz
      </label>
    </div>
  </div>
</div>
`;

exports[`<CheckboxGroup /> snapshot with inline <CheckboxGroup.Button /> 1`] = `
.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  border-radius: 4px;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  min-height: 40px;
  padding: 8px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #ffffff;
  color: #1355d0;
  border: 2px solid #1355d0;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c3:hover {
  box-shadow: 0px 2px 4px -1px rgba(14,68,196,0.2),0px 4px 5px 0px rgba(14,68,196,0.14),0px 1px 10px 0px rgba(14,68,196,0.12);
  background-color: #e5edfc;
  border-color: #0e44c4;
}

.c3:focus,
.c3:focus-within {
  box-shadow: 0px 2px 4px -1px rgba(19,85,208,0.2),0px 4px 5px 0px rgba(19,85,208,0.14),0px 1px 10px 0px rgba(19,85,208,0.12);
}

.c3:active {
  box-shadow: 0px 5px 5px -3px rgba(14,68,196,0.2),0px 8px 10px 1px rgba(14,68,196,0.14),0px 3px 14px 2px rgba(14,68,196,0.12);
  background-color: #e5edfc;
}

.c3 .c5 function (_ref5) {
  -webkit-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  -moz-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  -ms-var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  var: size = _ref5.size, _ref5$theme$spacing = _ref5.theme.spacing, xxsmall = _ref5$theme$spacing.xxsmall, medium = _ref5$theme$spacing.medium, large = _ref5$theme$spacing.large;
  return: "\\n          font-size: ".concat(sizes[size],";\\n          margin-right: ").concat(xxsmall,"px;\\n        ");
}

.c3 .c5 function (_ref5) var sizes = {
  xsmall: "".concat(medium,"px"), small:"".concat(medium,"px"), medium:"".concat(large,"px"), large:"".concat(large,"px"), xlarge:"".concat(large,"px");
}

.c4 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1 {
  display: inline-block;
  margin-right: 16px;
  vertical-align: top;
}

.c1:last-child {
  margin-right: 0;
}

.c1 .c6 {
  font-size: 17px;
  margin-left: 8px;
}

.c2 {
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2 c3"
      disabled={false}
      htmlFor="checkbox-button-21"
      onClick={[Function]}
      size="medium"
      type="button"
    >
      
      <input
        checked={false}
        className="c4"
        disabled={false}
        id="checkbox-button-21"
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Foo
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2 c3"
      disabled={false}
      htmlFor="checkbox-button-22"
      onClick={[Function]}
      size="medium"
      type="button"
    >
      
      <input
        checked={false}
        className="c4"
        disabled={false}
        id="checkbox-button-22"
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Bar
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2 c3"
      disabled={false}
      htmlFor="checkbox-button-23"
      onClick={[Function]}
      size="medium"
      type="button"
    >
      
      <input
        checked={false}
        className="c4"
        disabled={false}
        id="checkbox-button-23"
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Baz
    </label>
  </div>
</div>
`;
